--- a/contracts/package.json
+++ b/contracts/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.5.0",
     "@truffle/hdwallet-provider": "^2.0.4",
-    "bignumber.js": "^9.0.2"
+    "bignumber.js": "^9.0.2",
+    "dotenv": "^16.0.0"
   },
   "devDependencies": {
     "@openzeppelin/test-helpers": "^0.5.15",
